# marisa2

./: .gitignore  COPYING  Makefile.am  Makefile.in  README.md  configure  configure.ac  marisa2.pc.in
lib/: Makefile.am  Makefile.in  marisa2.h  version.sh
lib/marisa2/: error.cc  error.h  features.h  utility.cc  utility.h
lib/marisa2/grimoire/: bit-vector.cc  bit-vector.h  mapper.cc  mapper.h  pop-count.h  reader.cc  reader.h  vector.cc  vector.h  writer.cc  writer.h
src/: Makefile.am  marisa2.cc
test/: Makefile.am  bit-vector-test.cc  mapper-test.cc  pop-count-test.cc  reader-test.cc  vector-test.cc  writer-test.cc
test/gtest/: gtest-all.cc
tests/: Makefile.am  Makefile.in
tools/: Makefile.am  Makefile.in
